alignment fix for ad component

--- a/frontend/src/components/AdCard/styles.module.css
+++ b/frontend/src/components/AdCard/styles.module.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kaushan+Script&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap');
+
 .card_container{
     background: url('../../assets/coffee-meeting.jpg');
     background-position: center;
     background-size: cover;
     width: 80vw;
     height: 60vh;
-    /* border-radius: 40px; */
-    position: relative;;
+    margin: auto;
+    border-radius: 40px;
+    position: relative;
 }
 
 .overlay{
@@ -24,11 +28,15 @@
 }
 
 .inner_container h1{
-    font-size: 2.3vw;
+    font-size: 2.6vw;
+    font-family: "Kaushan Script", cursive;
+    margin-bottom: 4%;
 }
 
 .text_container{
     width: 50%;
+    line-height: 180%;
+    font-family: 'Plus Jakarta Sans', sans-serif;
     text-align: left;
     padding: 5%;
 }
@@ -36,5 +44,6 @@
 .ad_button{
     padding: 1vw 2vw;
     border: none;
+    margin-top: 7%;
     border-radius: 40px;
 }
