--- a/frontend/src/components/Processes/styles.module.css
+++ b/frontend/src/components/Processes/styles.module.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&family=Unbounded:wght@200..900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kaushan+Script&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap');
 
-.container{
+.container {
     width: 100vw;
     height: 190vh;
-    background:#edf1f0;
+    background: #edf1f0;
     margin: auto;
     font-family: "Inter", sans-serif;
     padding-top: 10vh;
 }
 
-.logo{
+.logo {
     width: 6vw;
 }
 
-.header_text{
+.header_text {
     font-size: 5vw;
     margin-top: 2vh;
     display: block;
@@ -24,12 +26,12 @@
     /* font-weight: 400; */
 }
 
-.container_first_part{
+.container_first_part {
     width: 80%;
-    margin: auto; 
+    margin: auto;
 }
 
-.special_text{
+.special_text {
     font-family: "Kaushan Script", cursive;
 }
 
@@ -40,10 +42,11 @@
     margin: auto;
     margin-top: 4vh;
     line-height: 170%;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 
 }
 
-.cards_container{
+.cards_container {
     width: 92%;
     margin: auto;
     display: flex;
@@ -52,18 +55,23 @@
     margin-top: 7vh;
 }
 
-.card{
+.card {
     background: blue;
     width: 31%;
     height: 72vh;
     border-radius: 25px;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+.card p {
+    line-height: 180%;
 }
 
 .logo img {
     margin: auto;
 }
 
-.divider div{
+.divider div {
     height: 2px;
     width: 15vw;
     background: black;
@@ -72,30 +80,30 @@
     margin-left: 1vw;
 }
 
-.card_inner{
+.card_inner {
     width: 80%;
     margin: auto;
 }
 
-.name{
+.name {
     text-align: left;
     font-weight: 600;
 }
 
-.description{
+.description {
     text-align: left;
     margin-top: 3vh;
 }
 
-.number{
-display: flex;
-flex-direction: row;
+.number {
+    display: flex;
+    flex-direction: row;
 }
 
-.name{
+.name {
     font-size: 3vw;
 }
 
-.bottom_div{
+.bottom_div {
     margin-top: 13vh;
 }
